<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.fim</groupId>
	<artifactId>fim</artifactId>
	<version>1.0.3-SNAPSHOT</version>

	<name>Fim</name>
	<packaging>jar</packaging>

	<properties>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- versions -->
		<java.version>1.8</java.version>

		<guava.version>18.0</guava.version>
		<commons-lang3.version>3.4</commons-lang3.version>
		<commons-cli.version>1.3.1</commons-cli.version>
		<commons-io.version>2.4</commons-io.version>
		<gson.version>2.3.1</gson.version>
		<cloning.version>1.9.2</cloning.version>
		<evo-inflector.version>1.2.1</evo-inflector.version>

		<junit.version>4.12</junit.version>
		<assertj-core.version>2.1.0</assertj-core.version>
		<mockito-all.version>1.10.19</mockito-all.version>
		<system-rules.version>1.12.0</system-rules.version>

		<!-- Plugins -->
		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
		<maven-shade-plugin.version>2.4.1</maven-shade-plugin.version>
		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
		<maven-scm-plugin.version>1.9.4</maven-scm-plugin.version>
		<maven-source-plugin.version>2.4</maven-source-plugin.version>
		<maven-assembly-plugin.version>2.5.5</maven-assembly-plugin.version>
		<maven-release-plugin.version>2.5.2</maven-release-plugin.version>
		<maven-site-plugin.version>3.4</maven-site-plugin.version>

	</properties>

	<!-- Licence -->
	<description>
		Fim stands for File Integrity Manager.
		Fim manage the integrity of a complete file tree.
	</description>

	<url>https://github.com/evrignaud/fim</url>

	<licenses>
		<license>
			<name>GNU General Public License (GPL)</name>
			<url>http://www.gnu.org/licenses/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Etienne Vrignaud</name>
			<email>evrignaud@gmail.com</email>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/evrignaud/fim.git</connection>
		<developerConnection>scm:git:git@github.com:evrignaud/fim.git</developerConnection>
		<url>https://github.com/evrignaud/fim</url>
		<tag>HEAD</tag>
	</scm>

	<inceptionYear>2015</inceptionYear>

	<dependencies>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>${commons-cli.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
			<groupId>uk.com.robust-it</groupId>
			<artifactId>cloning</artifactId>
			<version>${cloning.version}</version>
		</dependency>
		<dependency>
			<groupId>org.atteo</groupId>
			<artifactId>evo-inflector</artifactId>
			<version>${evo-inflector.version}</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj-core.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito-all.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.stefanbirkner</groupId>
			<artifactId>system-rules</artifactId>
			<version>${system-rules.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.fim.Fim</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<formats>
						<format>xml</format>
						<format>html</format>
					</formats>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.0.0</version>
				<configuration>
					<repoToken>yz1HDUtMG2qPbkAFkTltCeNHsiajJSytu</repoToken>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
				<configuration>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
				<configuration>
					<stagingSiteURL>${project.distributionManagement.site.url}</stagingSiteURL>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<reportSets>
								<reportSet>
									<reports>
										<report>index</report>
										<report>scm</report>
										<report>cim</report>
										<report>summary</report>
									</reports>
								</reportSet>
							</reportSets>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- Profiles -->
	<profiles>

		<profile>
			<id>distrib</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-scm-plugin</artifactId>
						<version>${maven-scm-plugin.version}</version>
						<configuration>
							<goals>checkout</goals>
							<scmVersionType>branch</scmVersionType>
							<scmVersion>gh-pages</scmVersion>
							<checkoutDirectory>target/gh-pages</checkoutDirectory>
						</configuration>
						<executions>
							<execution>
								<id>check-out-pages</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>checkout</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>${maven-assembly-plugin.version}</version>
						<configuration>
							<outputDirectory>${project.build.directory}/dist</outputDirectory>
							<descriptors>
								<descriptor>src/main/assembly/assembly-dist.xml</descriptor>
							</descriptors>
							<finalName>${project.artifactId}-${project.version}</finalName>
						</configuration>
						<executions>
							<execution>
								<id>dist</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

</project>
